--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Create.cshtml
@@ -1,5 +1,4 @@
 ﻿@model Dr4rum_eProjectIII.Models.Topic
-
 @{
     ViewBag.Title = "Create";
 }
@@ -9,29 +8,27 @@
     }
 </style>
 
-<h2>Create</h2>
-
-
 @using (Html.BeginForm("Create", "Topics", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-
+    <h2>
+        Create Topic
+    </h2>
+    <hr />
     <div class="form-horizontal">
-        <h4>Topic</h4>
-        <hr />
+        
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Topic_Title, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Topic_Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Topic_Title, new { htmlAttributes = new { @class = "form-control" , id = "title"} })
                 @Html.ValidationMessageFor(model => model.Topic_Title, "", new { @class = "text-danger" })
             </div>
         </div>
-        @*gan cung id se phat sinh loi*@
-        <div class="form-group">
+        <div class="form-group hide">
             @Html.LabelFor(model => model.Acc_ID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Acc_ID, new { htmlAttributes = new { @class = "form-control" }})
+                @Html.TextBoxFor(model => model.Acc_ID, new { @Value = 2, htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Acc_ID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -73,26 +70,57 @@
         <div class="form-group hide">
             @Html.LabelFor(model => model.date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @{ 
+                @{
                     DateTime currentdate = DateTime.Now;
                 }
-                @Html.TextBoxFor(model => model.date, new {@Value = currentdate, htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                @Html.TextBoxFor(model => model.date, new { @Value = currentdate, htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
                 @Html.ValidationMessageFor(model => model.date, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+        <!-- Button to Open the Modal -->
+        <button type="button" class="btn btn-primary" id="btnmodal" data-toggle="modal" data-target="#myModal">
+            Create
+        </button>
+
+        <!-- The Modal -->
+        <div class="modal" id="myModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="M-title">Modal Heading</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body" >
+                        The title of topic is unique. After you posted, you will can not edit. Are you sure you want to post?
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="Sure" class="btn btn-default" />
+                            </div>
+                        </div>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancle</button>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
 }
 
+
+
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script src="~/Content/ckeditor/ckeditor.js"></script>
@@ -102,5 +130,12 @@
         if (editor) { editor.destroy(true); }
         CKEDITOR.replace('Topic_Info', { enterMode: CKEDITOR.ENTER_BR, });
         CKFinder.setupCKEditor(null, '@Url.Content("~/Content/ckfinder/")');
+        
+        $("#btnmodal").click(function () {
+            $("#M-title").text("")
+            $("#M-title").text($("#title").val())
+        });
+
     </script>
+
 }
