--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Edit.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Edit.cshtml
@@ -7,26 +7,30 @@
     .hide{
         display: none
     }
+    .stitle h2{
+        color: blue;
+            }
 </style>
-<h2>Edit</h2>
-
+<div class="stitle mt-2 ml-2">
+    <h2>@Html.DisplayFor(model => model.Topic_Title, new { @disabled = "disabled", htmlAttributes = new { @class = "form-control" } })</h2>
+</div>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Topic</h4>
+
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Topic_Title)
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Topic_Title, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <h4>@Html.DisplayFor(model => model.Topic_Title, new { @disabled = "disabled", htmlAttributes = new { @class = "form-control" } })</h4>
             </div>
-        </div>
+        </div>*@
 
 
         <div class="form-group hide">
