--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Index.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Topics/Index.cshtml
@@ -1,13 +1,11 @@
 ﻿@model IEnumerable<Dr4rum_eProjectIII.Models.Topic>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "List of Topic";
 }
 
-<h2>Index</h2>
-
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <button type="button" class="btn btn-light">@Html.ActionLink("Create New", "Create")</button>
 </p>
 <table class="table">
     <tr>
