--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Register.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Register.cshtml
@@ -26,7 +26,7 @@
                 <div class="col-md-10">
                     @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
                     @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
-                    @ViewBag.errorMessage
+                    @ViewBag.MessageForUsername
                 </div>
             </div>
             <div class="form-group">
